Fix scrollbar con display none

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ body {
     /* Siempre muestra la barra de desplazamiento vertical */
 }
 
+body::-webkit-scrollbar {
+   display: none;
+}
+
 body::-webkit-scrollbar-track {
     background-color: black;
 }
